k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: food
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: food
